Recipes setup and fixes

--- a/Cookify.Web/Areas/User/Views/Home/Index.cshtml
+++ b/Cookify.Web/Areas/User/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 
 
 <section class="user-panels ck-container">
-    <a href="#" class="user-panels__item">
+    <a asp-controller="Recipe" asp-action="Index" class="user-panels__item">
         <img src="~/assets/placeholders/user-recipes.jpg" />
         <span>Wszystkie przepisy</span>
     </a>
@@ -15,7 +15,7 @@
         <img src="~/assets/placeholders/user-categories.jpg" />
         <span>Wszystkie kategorie</span>
     </a>
-    <a href="#" class="user-panels__item">
+    <a asp-controller="Recipe" asp-action="Index" class="user-panels__item">
         <img src="~/assets/placeholders/user-popular.jpg" />
         <span>Najpopularniejsze przepisy</span>
     </a>
