Recipes setup and fixes

--- a/Cookify.Web/Views/Shared/Components/AdminNav/Default.cshtml
+++ b/Cookify.Web/Views/Shared/Components/AdminNav/Default.cshtml
@@ -45,6 +45,9 @@
                 </a>
             </div>
         </div>
+        <a asp-area="Admin" asp-controller="Comment" asp-action="Index" class="ck-nav__links__item">
+            <span>Komentarze</span>
+        </a>
     </div>
 </nav>
 <div class="ck-nav-height"></div>
