--- a/Cookify.Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/Cookify.Web/Areas/Admin/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
         <img class="admin-panels__item__bg" src="~/assets/placeholders/admin-categories.jpg" />
         <span>Kategorie</span>
     </a>
-    <a asp-area="Admin" asp-controller="User" asp-action="Index"class="admin-panels__item">
+    <a asp-area="Admin" asp-controller="User" asp-action="Index" class="admin-panels__item">
         <img class="admin-panels__item__bg" src="~/assets/placeholders/admin-users.jpg" />
         <span>Użytkownicy</span>
     </a>
@@ -24,5 +24,9 @@
     <a asp-area="Admin" asp-controller="Ingredient" asp-action="Index" class="admin-panels__item">
         <img class="admin-panels__item__bg" src="~/assets/placeholders/admin-ingredients.jpg" />
         <span>Składniki</span>
+    </a>
+    <a asp-area="Admin" asp-controller="Comment" asp-action="Index" class="admin-panels__item">
+        <img class="admin-panels__item__bg" src="~/assets/placeholders/admin-comments.jpg" />
+        <span>Komentarze</span>
     </a>
 </div>
