--- a/Cookify.Web/Areas/Admin/Views/Image/Index.cshtml
+++ b/Cookify.Web/Areas/Admin/Views/Image/Index.cshtml
@@ -12,13 +12,13 @@
                     Id
                 </th>
                 <th width="30%">
-                    Path / URL
+                    Adres URL zdjęcia
                 </th>
                 <th width="20%">
-                    Title
+                    Tytuł
                 </th>
                 <th width="30%">
-                    Preview
+                    Podgląd
                 </th>
             </tr>
         </thead>
@@ -37,5 +37,5 @@
 }
 else
 {
-    <p>There are no images in the database!</p>
+    <p>Nie znaleziono zdjęć w bazie danych!</p>
 }
