--- a/Cookify.Web/Areas/User/Views/Recipe/Details.cshtml
+++ b/Cookify.Web/Areas/User/Views/Recipe/Details.cshtml
@@ -77,7 +77,7 @@
                             <img class="heart-filled" src="~/assets/icons/components/heart-filled.svg" alt="">
                         </div>
                         <div class="ck-tooltip">
-                            dodaj do ulubionych
+                            Dodaj do ulubionych
                         </div>
                     </div>
                     <div class="single-recipe__sidebar__item ck-tooltip-con go-to-comments">
@@ -85,7 +85,7 @@
                             <img src="~/assets/icons/components/comment-green.svg" alt="">
                         </a>
                         <div class="ck-tooltip">
-                            napisz komentarz
+                            Napisz komentarz
                         </div>
                     </div>
                 </div>
