--- a/Cookify.Web/Areas/User/Views/RecipeCategory/Index.cshtml
+++ b/Cookify.Web/Areas/User/Views/RecipeCategory/Index.cshtml
@@ -5,10 +5,10 @@
 <br />
 <div class="row">
     <div class="col-6">
-        <h2 class="text-primary">List of recipe categories:</h2>
+        <h2 class="text-primary">Lista kategorii przepisów:</h2>
     </div>
     <div class="col-6 text-right">
-        <a class="btn btn-primary text-light" asp-action="Upsert">Create New Recipe Category</a>
+        <a class="btn btn-primary text-light" asp-action="Upsert">Utwórz nową kategorię przepisu</a>
     </div>
 </div>
 
@@ -20,7 +20,7 @@
             <thead>
                 <tr>
                     <th>
-                        Title
+                        Tytuł
                     </th>
                 </tr>
             </thead>
@@ -36,6 +36,6 @@
     }
     else
     {
-        <p>There are no recipe categories in the database!</p>
+        <p>Nie znaleziono przepisów w bazie danych!</p>
     }
 </div>
