--- a/Cookify.Web/Views/Shared/_CreateAndGoBackButton.cshtml
+++ b/Cookify.Web/Views/Shared/_CreateAndGoBackButton.cshtml
@@ -1,4 +1,4 @@
 ﻿<div class="admin-btn-group">
-    <button type="submit" class="admin-btn">Create</button>
-    <a asp-action="Index" class="admin-btn">Go back</a>
+    <button type="submit" class="admin-btn">Utwórz</button>
+    <a asp-action="Index" class="admin-btn">Wróć</a>
 </div>
