--- a/Cookify.Web/Views/Shared/_EditAndGoBackButton.cshtml
+++ b/Cookify.Web/Views/Shared/_EditAndGoBackButton.cshtml
@@ -1,6 +1,6 @@
 ﻿@model int
 
 <div class="admin-btn-group">
-    <button type="submit" class="admin-btn" asp-route-id="@Model">Update</button>
-    <a asp-action="Index" class="admin-btn">Go back</a>
+    <button type="submit" class="admin-btn" asp-route-id="@Model">Aktualizuj</button>
+    <a asp-action="Index" class="admin-btn">Wróć</a>
 </div>
