--- a/Cookify.Web/Areas/Admin/Views/Ingredient/Upsert.cshtml
+++ b/Cookify.Web/Areas/Admin/Views/Ingredient/Upsert.cshtml
@@ -1,14 +1,14 @@
 ﻿@model Cookify.Models.Ingredient
 
 @{
-    var title = "Create new ingredient";
+    var title = "Stwórz nowy składnik";
 }
 
 <form method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     @if (Model.Id != 0)
     {
-        title = "Edit ingredient";
+        title = "Edytuj składnik";
     }
     <div class="admin-header">
         <h1 class="admin-header__title">@title</h1>
