--- a/Cookify.Web/Areas/Admin/Views/User/Index.cshtml
+++ b/Cookify.Web/Areas/Admin/Views/User/Index.cshtml
@@ -9,19 +9,19 @@
         <thead>
             <tr>
                 <th width="15%">
-                    User Name
+                    Nazwa użytkownika
                 </th>
                 <th width="25%">
                     Email
                 </th>
                 <th width="10%">
-                    Role
+                    Rola
                 </th>
                 <th width="5%">
-                    Edit
+                    Edytuj
                 </th>
                 <th width="5%">
-                    Delete
+                    Usuń
                 </th>
             </tr>
         </thead>
@@ -42,5 +42,5 @@
 }
 else
 {
-    <p>There are no users in the database!</p>
+    <p>Nie znaleziono użytkowników w bazie danych!</p>
 }
