--- a/Cookify.Web/Areas/User/Views/Home/Index.cshtml
+++ b/Cookify.Web/Areas/User/Views/Home/Index.cshtml
@@ -19,9 +19,9 @@
         <img src="~/assets/placeholders/user-popular.jpg" />
         <span>Najpopularniejsze przepisy</span>
     </a>
-    <a href="#" class="user-panels__item open-ingredient-popup">
+    <a href="#" class="user-panels__item open-search-popup">
         <img class="user-panels__item" src="~/assets/placeholders/user-ingredients-search.jpg" />
-        <span>Szukaj wg. składników</span>
+        <span>Otwórz wyszukiwarkę</span>
     </a>
 </section>
 
