--- a/Cookify.Web/Views/Shared/Components/SearchPopup/Default.cshtml
+++ b/Cookify.Web/Views/Shared/Components/SearchPopup/Default.cshtml
@@ -9,9 +9,9 @@
             <div class="title-card mobile-h2 open-category-popup clickable">
                 Przeglądaj kategorie
             </div>
-            <div class="title-card mobile-h2 open-ingredient-popup clickable">
+            <!--<div class="title-card mobile-h2 open-ingredient-popup clickable">
                 Szukaj wg. składników
-            </div>
+            </div>-->
         </div>
     </div>
 </div>
