--- a/Cookify.Web/Views/Shared/_FiltersSidebar.cshtml
+++ b/Cookify.Web/Views/Shared/_FiltersSidebar.cshtml
@@ -12,7 +12,7 @@
         <span>Kategorie</span>
     </div>
 
-    <div class="filters-sidebar__field--ingredients open-ingredient-popup">
+    <!--<div class="filters-sidebar__field--ingredients open-ingredient-popup">
         <span>Składniki</span>
-    </div>
+    </div>-->
 </form>
